fixed margin, padding and grid issues. made nav solid between page changes, added tea table to favorites, swapped out ascii art for a smaller that isn't too large for small screens.

--- a/style.css
+++ b/style.css
@@ -10,9 +10,11 @@
     font-family: monospace;
     white-space: pre;
     font-weight: bold;
+    color: green;
 }
 
-div {
-    border: 1px solid #ffffff;
-}
+
+
+
+
 
